@@ -13,6 +13,7 @@
 # under the License.
 
 import eventlet
+import hashlib
 import logging
 import math
 import memcache
@@ -76,7 +77,26 @@ class RedisBackend(Backend):
         self.__max_sleep_time_seconds = max_sleep_time_seconds
         self.__log_sleep_time_seconds = log_sleep_time_seconds
         self.__rate_limit_response = rate_limit_response
-        self.__redis_conn_pool = redis.ConnectionPool(host=host, port=port)
+        self.__timeout = kwargs.get('timeout', 20)
+        self.__max_connections = kwargs.get('max_connections', 100)
+        # Use a thread-safe blocking connection pool.
+        conn_pool = redis.BlockingConnectionPool(
+            host=host, port=port, max_connections=self.__max_connections, timeout=self.__timeout,
+        )
+        self.__redis = redis.StrictRedis(
+            connection_pool=conn_pool, decode_responses=True,
+            socket_timeout=self.__timeout, socket_connect_timeout=self.__timeout,
+        )
+
+        script_name = "redis_sliding_window.lua"
+        script = common.load_lua_script(script_name)
+        if not script:
+            self.logger.error(
+                "error loading rate limit script: '{0}'".format(script_name)
+            )
+            return
+        self.__rate_limit_script = script
+        self.__rate_limit_script_sha = hashlib.sha1(script).hexdigest()
 
     def is_available(self):
         """Check whether the redis is available and supported."""
@@ -93,10 +113,9 @@ class RedisBackend(Backend):
         :return: bool
         """
         try:
-            redis_client = redis.StrictRedis(connection_pool=self.__redis_conn_pool, decode_responses=True)
             # Invoke get to test redis connection.
             # Will return None or one of the following exceptions.
-            redis_client.get("")
+            self.__redis.get("")
         except (redis.exceptions.ConnectionError, redis.exceptions.BusyLoadingError):
             return False
         return True
@@ -108,8 +127,7 @@ class RedisBackend(Backend):
 
         :return: bool
         """
-        redis_client = redis.StrictRedis(connection_pool=self.__redis_conn_pool, decode_responses=True)
-        version = redis_client.info().get('redis_version', None)
+        version = self.__redis.info().get('redis_version', None)
         if not version:
             return False
         return bool(StrictVersion(version) >= StrictVersion('3.0.0'))
@@ -133,29 +151,39 @@ class RedisBackend(Backend):
             )
             return self.__rate_limit(key, sliding_window_seconds, max_rate, max_rate_string)
         except Exception as e:
+            print "####################################################################"
+            print e
             self.logger.debug("failed to rate limit: {0}".format(str(e)))
+        # TODO: REMOVE
+        return self.__rate_limit(key, sliding_window_seconds, max_rate, max_rate_string)
 
     def __rate_limit(self, key, window_seconds, max_calls, max_rate_string):
         now = time.time()
         # Convert from float to int with millisecond accuracy.
         now_int = int(now * 1000)
         window_seconds_int = int(window_seconds * 1000)
-
         # Max. lookback as timestamp.
-        lookback_time_max = now_int - window_seconds_int
+        lookback_time_max = int(now_int - window_seconds_int)
+        # Make sure it's an int.
+        max_calls_int = int(max_calls)
 
-        # Increase performance by using a pipeline to buffer multiple commands to the redis backend in a single request.
-        pipe = redis.StrictRedis(connection_pool=self.__redis_conn_pool, decode_responses=True).pipeline()
-        # Remove all API calls that are older than the sliding window.
-        pipe.zremrangebyscore(key, '-inf', lookback_time_max)
-        # List of API calls during sliding window.
-        pipe.zrange(key, 0, -1)
-        # Add current API call with timestamp.
-        pipe.zadd(key, {now_int: now_int})
-        # Reset expiry time for key.
-        pipe.expire(key, window_seconds_int)
-        # Execute the transaction block.
-        result = pipe.execute()
+        print "------------------------------------------------------------------------------------------------------------"
+        print key, lookback_time_max, now_int, max_calls_int
+
+        # Use the SHA1 digest of the LUA script and use redis internal caching instead of sending it every time.
+        try:
+            remaining, timestamps = self.__redis.evalsha(
+                self.__rate_limit_script_sha, 5, key, lookback_time_max, now_int, max_calls_int, window_seconds_int
+            )
+        except redis.exceptions.NoScriptError:
+            remaining, timestamps = self.__redis.eval(
+                self.__rate_limit_script, 5, key, lookback_time_max, now_int, max_calls_int, window_seconds_int
+            )
+
+        print "------------------------------------------------------------------------------------------------------------"
+        print remaining, timestamps
+
+        return None
 
         timestamps = []
         if result and len(result) >= 1:
@@ -167,6 +195,7 @@ class RedisBackend(Backend):
         if remaining > 0:
             return None
 
+
         # Check if the request should be suspended.
         # Get seconds until another request would be possible according to rate limit. Always round up.
         timestamp0 = now_int
@@ -174,6 +203,17 @@ class RedisBackend(Backend):
             timestamp0 = int(timestamps[0])
 
         retry_after_seconds = int(math.ceil(timestamp0 + window_seconds_int - now_int) / 1000)
+
+        print "------------------------------------------------------------------------------------------------------------"
+        print "timestamps: {0}".format([time.strftime("%H:%M:%S.%s", time.localtime(float(t)/1000)) for t in timestamps])
+        print "now: {0}".format(time.strftime("%H:%M:%S.%s", time.localtime(now)))
+        print "timestamp0: {0}".format(time.strftime("%H:%M:%S.%s", time.localtime(float(timestamp0)/1000)))
+        print "window_seconds: {0}".format(window_seconds)
+        print "lookback_time_max: {0}".format(time.strftime("%H:%M:%S.%s", time.localtime(lookback_time_max/1000)))
+        print "remaining: {0}".format(remaining)
+        print "rate: {0}".format(max_rate_string)
+        print "retry_after_seconds: {0}".format(retry_after_seconds)
+
         # Suspend the current request if its it has to wait no longer than max_sleep_time_seconds.
         if retry_after_seconds <= self.__max_sleep_time_seconds:
             # Log the current request if it has to be suspended for at least log_sleep_time_seconds.
